--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
             --blue-vibrant: #3b82f6;
             --iron-gray: #4b5563;
             --winner-gold: #D4AF37;
-            /* ★ 修改：改為更有質感的深金色 */
             --gold-gradient: linear-gradient(to bottom, #cfb53b 0%, #f1c40f 50%, #cfb53b 100%);
         }
 
@@ -41,6 +40,7 @@
             align-items: center;
         }
 
+        /* --- 管理者介面佈局 --- */
         .admin-dashboard {
             width: 100%;
             text-align: center;
@@ -57,6 +57,26 @@
             display: inline-block;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
             margin-bottom: 15px;
+        }
+
+        /* 試算表連結按鈕樣式 */
+        .admin-edit-link {
+            display: inline-block;
+            margin-top: 10px;
+            padding: 5px 15px;
+            background-color: #ffffff;
+            color: var(--blue-navy);
+            text-decoration: none;
+            font-size: 0.9rem;
+            font-weight: bold;
+            border: 1px solid var(--blue-navy);
+            border-radius: 50px;
+            transition: 0.3s;
+        }
+
+        .admin-edit-link:hover {
+            background-color: var(--blue-navy);
+            color: #ffffff;
         }
 
         .question-card {
@@ -86,6 +106,7 @@
             box-sizing: border-box;
         }
 
+        /* --- 投票者模式 --- */
         .voter-view {
             width: 100%;
             max-width: 600px;
@@ -110,6 +131,7 @@
             background-color: #374151;
         }
 
+        /* --- 品牌底標 --- */
         .brand-footer {
             margin-top: auto;
             padding: 25px 0;
@@ -144,11 +166,21 @@
             <div class="qr-section">
                 <div id="qrcode"></div>
             </div>
-            <p style="color: #999; font-size: 0.9rem; margin-top: -10px; margin-bottom: 15px;">掃碼即時互動</p>
-            <div class="question-card">
+
+            <p style="color: #999; font-size: 0.9rem; margin-top: -10px; margin-bottom: 10px;">掃碼即時互動</p>
+
+            <a href="https://docs.google.com/spreadsheets/d/1bZ330IeZKWdxmks13ZgLe3-BgFycQdzukDZ8SUN3u3w/edit?gid=103629779#gid=103629779"
+                target="_blank" class="admin-edit-link">
+                <i class="fa-solid fa-pen-to-square"></i> 題庫編輯控制台
+            </a>
+
+            <div class="question-card" style="margin-top: 20px;">
                 <h1 id="title-admin">載入中...</h1>
             </div>
-            <div class="chart-frame"><canvas id="mainChart"></canvas></div>
+
+            <div class="chart-frame">
+                <canvas id="mainChart"></canvas>
+            </div>
         </div>
 
         <div id="view-voter" class="voter-view hidden">
@@ -195,7 +227,6 @@
                 const labels = Object.keys(data.stats);
                 const votes = Object.values(data.stats);
 
-                // 動態判斷第一名顏色
                 const maxVotes = Math.max(...votes);
                 const backgroundColors = votes.map(v => (v === maxVotes && maxVotes > 0) ? '#D4AF37' : '#3b82f6');
 
@@ -254,14 +285,13 @@
                 const data = await res.json();
                 document.getElementById('title-voter').innerText = data.question.title;
 
-                // ★ 防灌票檢查：檢查瀏覽器是否存有該題目的投票紀錄
                 const hasVoted = localStorage.getItem('voted_' + data.question.id);
                 const container = document.getElementById('btn-group');
                 const fb = document.getElementById('feedback');
 
                 if (hasVoted) {
                     fb.innerHTML = "✨ 您已經投過票囉！請看大螢幕統計結果。";
-                    return; // 不顯示按鈕
+                    return;
                 }
 
                 data.question.options.forEach(opt => {
@@ -280,11 +310,8 @@
             document.querySelectorAll('.vote-item').forEach(b => b.disabled = true);
             try {
                 await fetch(API_URL, { method: 'POST', mode: 'no-cors', body: JSON.stringify({ questionId: qid, option: val }) });
-
-                // ★ 投票成功後，存入瀏覽器紀錄
                 localStorage.setItem('voted_' + qid, 'true');
-
-                document.getElementById('btn-group').innerHTML = ""; // 隱藏按鈕
+                document.getElementById('btn-group').innerHTML = "";
                 fb.innerHTML = "✅ 投票成功！感謝參與 iTree";
             } catch (e) {
                 fb.innerText = "連線失敗";
